schemes/artic/400/v1.0.0/README.md
# artic 400bp v1.0.0

[![Generic badge](https://img.shields.io/badge/STATUS-DEPRECATED-red.svg)]

> If you use this scheme please cite: https://doi.org/10.1101%2F2020.09.04.283077

[primalscheme labs](https://labs.primalscheme.com/detail/artic/400/v1.0.0)

## Metadata

**Target Organisms:**
- sars-cov-2

## Contributors

- ARTIC network

## Overviews

<div style="width: 100%;"><img src="work/primer.svg" style="width: 100%;" alt="Click to see the source"></div>

## Details

```json
{
    "schema_version": "1.0.0-alpha",
    "name": "artic",
    "amplicon_size": 400,
    "version": "v1.0.0",
    "contributors": [
        {
            "name": "ARTIC network"
        }
    ],
    "target_organisms": [
        {
            "common_name": "sars-cov-2"
        }
    ],
    "aliases": [
        "ARTIC/V1"
    ],
    "license": "CC-BY-SA-4.0",
    "status": "DEPRECATED",
    "citations": [
        "https://doi.org/10.1101%2F2020.09.04.283077"
    ],
    "primer_checksum": "primaschema:bed:3aa63ea0f7621a9b",
    "primer_file_sha256": "sha256:6f3e3899745e87087184550effda4d958d258c31d12d2832f6050c9dbb13271a",
    "reference_checksum": "primaschema:ref:21c16fc69acb3b9e",
    "reference_file_sha256": "sha256:b09a4a3d6824dc4a9f3a17d480f3335f73cb1507897f6dad0de871e8f00d8637"
}
```



------------------------------------------------------------------------

This work is licensed under a [Creative Commons Attribution-ShareAlike 4.0 International License](http://creativecommons.org/licenses/by-sa/4.0/)

![](https://i.creativecommons.org/l/by-sa/4.0/88x31.png)